--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http-status": "^1.6.2",
     "joi": "^17.7.1",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.0.1",
     "uuid": "^9.0.0"
   }
